add instance stop and delete
